--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mustache": "^2.3.0",
     "natives": "^1.1.6",
     "promise-polyfill": "^6.0.2",
+    "ractive": "^1.3.8",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "require-uncached": "^1.0.3",
